# Cerberus

./: .clang-format  .cproject.bak  .gitignore  .gitmodules  .mxproject  .pre-commit-config.yaml  .project  CMakeLists.txt  CmakeLists.txt  Dockerfile  LSM6DSO_IMU_I2C.cs  Makefile  Mount_hardware_windows_automation.py  README.md  art  cerberus.ioc  cerberus.resc  cerberusgen.py  compose.yml  flash.cfg  mount.py  shell.nix  torque_calc_sim.py
.docker/: Dockerfile  docker-compose.yaml
.github/workflows/: build-check.yml  build.yml
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  ams.h  bms.h  bms_can_monitor.h  can_handler.h  cerb_utils.h  cerberus_conf.h  control.h  dti.h  emrax.h  fault.h  monitor.h  mpu.h  nero.h  nero_state_machine.h  pdu.h  pedals.h  processing.h  queues.h  serial_monitor.h  state_machine.h  steeringio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  temp_sens_data.h  torque.h
Core/Src/: ams.c  bms.c  bms_can_monitor.c  can_handler.c  cerb_utils.c  control.c  dti.c  fault.c  freertos.c  main.c  monitor.c  mpu.c  nero.c  nero_state_machine.c  pdu.c  pedals.c  processing.c  serial_monitor.c  state_machine.c  state_machine_based.cpp  steeringio.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c  temp_sens_data.c  torque.c
Core/templates/: dti.c  dti.c.j2
Drivers/CAN/: can.c  can.h  can_config.h
Drivers/IMU_DRIVER/: IMU.c  IMU.h
Drivers/NER/include/: can.h  can_config.h  can_handler.h  cascadiamc.h  lsm6dso.h  m24c32.h  pi4ioe.h  sht30.h
Drivers/NER/src/: can.c  can_handler.c  cascadiamc.c  lsm6dso.c  m24c32.c  pi4ioe.c  sht30.c
Drivers/SHT30/: sht30.c  sht30.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_can.h  stm32f4xx_hal_gpio_ex.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_can.c
Drivers/imu/: imu.c  imu.h
Test/renode/: LSM6DSO_IMU_I2C.cs  STM32F4_I2C.cs  STM32F4_I2C_NER.cs  mpu.repl  sht30.cs  stm32f405.repl
Test/unity/tests/: can_handler_test.c  cerberus_test.c  cerberus_test.h
cmake/: gcc-arm-none-eabi.cmake  st-project.cmake
cmake/stm32cubemx/: CMakeLists.txt
